tests/invalid/Assign_Invalid_3.whiley
import * from whiley.lang.*

function f(int x, int y) -> bool:
    return x + y
